исправлены все замечания и советы

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <span class="header__main-title">&lt;/html&gt;</span>
+      <a href="#" class="header__main-title">&lt;/html&gt;</a>
       <h1 class="header__title">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -58,11 +58,14 @@
             Фритрек и нулевой спринт: Подготовка к работе
           </h2>
           <div class="card__image-item">
-            <span class="image-label label-uppercase">&lt;/html&gt;</span>
+            <span class="image-label label-uppercase" aria-hidden="true"
+              >&lt;/html&gt;</span
+            >
             <img
               src="./images/image-0.png"
               alt="Фритрек и нулевой спринт: Подготовка к работе"
               class="card__image"
+              loading="lazy"
             />
           </div>
           <div class="card__text-item">
@@ -77,7 +80,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="html-1">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="html-1"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -118,7 +125,9 @@
         <article class="card">
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image-item">
-            <span class="image-label label-uppercase">&lt;/html&gt;</span>
+            <span class="image-label label-uppercase" aria-hidden="true"
+              >&lt;/html&gt;</span
+            >
             <img
               src="./images/image-1.png"
               alt="1 спринт: Я — чистый лист"
@@ -140,7 +149,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="html-2">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="html-2"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -181,7 +194,9 @@
         <article class="card">
           <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image-item">
-            <span class="image-label label-uppercase">&lt;css&gt;</span>
+            <span class="image-label label-uppercase" aria-hidden="true"
+              >&lt;css&gt;</span
+            >
             <img
               src="./images/image-2.png"
               alt="1 спринт: А если не получится?"
@@ -202,7 +217,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="css">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="css"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -243,7 +262,9 @@
         <article class="card">
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="card__image-item">
-            <span class="image-label">&lt;good start&gt;</span>
+            <span class="image-label" aria-hidden="true"
+              >&lt;good start&gt;</span
+            >
             <img
               src="./images/image-3.png"
               alt="2 спринт: Погоня за идеалом"
@@ -266,7 +287,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="desigions">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="desigions"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -311,7 +336,7 @@
         <article class="card">
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image-item">
-            <span class="image-label">care</span>
+            <span class="image-label" aria-hidden="true">care</span>
             <img
               src="./images/image-4.png"
               alt="2 спринт: О тех, кто рядом"
@@ -336,7 +361,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="care">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="care"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -377,7 +406,7 @@
         <article class="card">
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image-item">
-            <span class="image-label">&lt;pain&gt;</span>
+            <span class="image-label" aria-hidden="true">&lt;pain&gt;</span>
             <img
               src="./images/image-5.png"
               alt="3 спринт: Обходные стратегии"
@@ -397,7 +426,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="support">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="support"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -438,7 +471,9 @@
         <article class="card">
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image-item">
-            <span class="image-label">&lt;devastation&gt;</span>
+            <span class="image-label" aria-hidden="true"
+              >&lt;devastation&gt;</span
+            >
             <img
               src="./images/image-6.png"
               alt="3 спринт: Когда опускаются руки"
@@ -460,7 +495,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="lifes-style">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="lifes-style"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -505,7 +544,7 @@
         <article class="card">
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image-item">
-            <span class="image-label">&lt;victory&gt;</span>
+            <span class="image-label" aria-hidden="true">&lt;victory&gt;</span>
             <img
               src="./images/image-7.png"
               alt="«Сейчас я здесь»"
@@ -529,7 +568,11 @@
             </p>
           </div>
           <div class="card__like-button-item">
-            <button class="card__icon-button" aria-labelledby="experience">
+            <button
+              class="card__icon-button"
+              type="button"
+              aria-labelledby="experience"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="like-icon"
@@ -573,8 +616,7 @@
         </article>
       </section>
     </main>
-
-    <section class="footer-button">
+    <footer class="footer-button">
       <button
         class="button button-save"
         onclick="window['some-modal-id'].showModal()"
@@ -590,31 +632,29 @@
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
-    </section>
+    </footer>
     <dialog class="dialog" id="some-modal-id">
-      <div class="dialog__item">
-        <div class="dialog__text-item">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            class="floppy-image"
-            viewbox="0 0 21 21"
-          >
-            <use href="./svg/floppy-perfection.svg#floppy" />
-          </svg>
-          <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
-        </div>
-        <form>
-          <button
-            class="button button-confirm"
-            onclick="window['some-modal-id'].close()"
-            type="submit"
-            aria-controls="some-modal-id"
-          >
-            <span class="button__text">ok</span>
-          </button>
-        </form>
+      <div class="dialog__text-item">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          class="floppy-image"
+          viewbox="0 0 21 21"
+        >
+          <use href="./svg/floppy-perfection.svg#floppy" />
+        </svg>
+        <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
       </div>
+      <form method="dialog">
+        <button
+          class="button button-confirm"
+          onclick="window['some-modal-id'].close()"
+          type="submit"
+          aria-controls="some-modal-id"
+        >
+          <span class="button__text">ok</span>
+        </button>
+      </form>
     </dialog>
     <script src="./scripts/like.js"></script>
   </body>
